# validatemodels.js
@@ -1,10 +1,18 @@
 function validatecreateemployeemodel(body){
-    if(!body.Department_id || !body.first_name || !body.last_name || !body.email || !body.hire_date || !body.salary){
+    if(!body.Department_id || !body.first_name || !body.last_name || !body.email || !body.hire_date || !body.salary || !body.password){
+        return false;
+    }
+    return true;
+}
+
+function loginemployee(body){
+    if(!body.email || !body.password){
         return false;
     }
     return true;
 }
 
 module.exports = {
-    validatecreateemployeemodel : validatecreateemployeemodel
+    validatecreateemployeemodel : validatecreateemployeemodel,
+    loginemployee : loginemployee,
 }
